add logging,tracing,monitoring to CI/CD

--- a/helm/bank-app/charts/bank-account-service/values.yaml
+++ b/helm/bank-app/charts/bank-account-service/values.yaml
@@ -128,3 +128,4 @@ config:
   notification_host: "http://bankapp-notification-service.{{ .Release.Namespace }}.svc.cluster.local:8080"
   kafka_server: "bankapp-kafka.{{ .Release.Namespace }}.svc.cluster.local:9092"
   notification_topic_name: "messages"
+  zipkin_endpoint: "http://zipkin.monitoring.svc.cluster.local:9411/api/v2/spans"
