--- a/helm/bank-app/charts/bank-exchange-generator-service/templates/configmap.yaml
+++ b/helm/bank-app/charts/bank-exchange-generator-service/templates/configmap.yaml
@@ -21,6 +21,7 @@ data:
   SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER-URI: {{ tpl .Values.config.keycloak_uri . | quote }}
   SPRING_KAFKA_BOOTSTRAP-SERVERS: {{ tpl .Values.config.kafka_server . | quote }}
   TOPIC_NAME: {{ tpl .Values.config.rates_topic_name . | quote }}
+  MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: {{ tpl .Values.config.zipkin_endpoint . | quote }}
 
   # SPRING_DATASOURCE_PASSWORD would typically come from a secret, not this ConfigMap.
 
