--- a/helm/bank-app/charts/bank-front-service/values.yaml
+++ b/helm/bank-app/charts/bank-front-service/values.yaml
@@ -127,3 +127,4 @@ config:
   account_host: "http://bankapp-account-service.{{ .Release.Namespace }}.svc.cluster.local:8080"
   transfer_host: "http://bankapp-transfer-service.{{ .Release.Namespace }}.svc.cluster.local:8080"
   cash_host: "http://bankapp-cash-service.{{ .Release.Namespace }}.svc.cluster.local:8080"
+  zipkin_endpoint: "http://zipkin.monitoring.svc.cluster.local:9411/api/v2/spans"
