--- a/helm/bank-app/charts/bank-blocker-service/templates/configmap.yaml
+++ b/helm/bank-app/charts/bank-blocker-service/templates/configmap.yaml
@@ -18,6 +18,7 @@ data:
   # Note: The values come from .Values.config which are set by the umbrella chart.
   # Use the 'tpl' function to render the database_url which contains Helm templating itself
   SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI: {{ tpl .Values.config.keycloak_uri . | quote }}
+  MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: {{ tpl .Values.config.zipkin_endpoint . | quote }}
   # SPRING_DATASOURCE_PASSWORD would typically come from a secret, not this ConfigMap.
 
   # Example: Include other config defined in values.yaml
