--- a/helm/bank-app/charts/bank-blocker-service/templates/deployment.yaml
+++ b/helm/bank-app/charts/bank-blocker-service/templates/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "bank-blocker-service.fullname" . }}
   labels:
     {{- include "bank-blocker-service.labels" . | nindent 4 }}
+    app: {{ .Chart.Name }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
