--- a/helm/bank-app/charts/bank-cash-service/templates/configmap.yaml
+++ b/helm/bank-app/charts/bank-cash-service/templates/configmap.yaml
@@ -17,6 +17,7 @@ data:
   SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER-URI: {{ tpl .Values.config.keycloak_uri . | quote }}
   SPRING_KAFKA_BOOTSTRAP-SERVERS: {{ tpl .Values.config.kafka_server . | quote }}
   TOPIC_NAME: {{ tpl .Values.config.notification_topic_name . | quote }}
+  MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: {{ tpl .Values.config.zipkin_endpoint . | quote }}
 
   # Example: Include other config defined in values.yaml
   # OTHER_CONFIG_PARAM: {{ .Values.config.some_other_config | quote }}
