--- a/helm/bank-app/charts/bank-exchange-generator-service/values.yaml
+++ b/helm/bank-app/charts/bank-exchange-generator-service/values.yaml
@@ -127,3 +127,4 @@ config:
   exchange_host: "http://bankapp-exchange-service.{{ .Release.Namespace }}.svc.cluster.local:8081"
   kafka_server: "kafka.{{ .Release.Namespace }}.svc.cluster.local:9092"
   rates_topic_name: "exchange-rates"
+  zipkin_endpoint: "http://zipkin.monitoring.svc.cluster.local:9411/api/v2/spans"
