--- a/helm/bank-app/charts/bank-front-service/templates/configmap.yaml
+++ b/helm/bank-app/charts/bank-front-service/templates/configmap.yaml
@@ -21,6 +21,7 @@ data:
   TRANSFER_HOST: {{ tpl .Values.config.transfer_host . | quote }}
   CASH_HOST: {{ tpl .Values.config.cash_host . | quote }}
   SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER-URI: {{ tpl .Values.config.keycloak_uri . | quote }}
+  MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: {{ tpl .Values.config.zipkin_endpoint . | quote }}
 
   # SPRING_DATASOURCE_PASSWORD would typically come from a secret, not this ConfigMap.
 
