--- a/helm/bank-app/charts/bank-transfer-service/values.yaml
+++ b/helm/bank-app/charts/bank-transfer-service/values.yaml
@@ -134,3 +134,4 @@ config:
   exchange_host: "http://bankapp-exchange-service.{{ .Release.Namespace }}.svc.cluster.local:8081"
   kafka_server: "kafka.{{ .Release.Namespace }}.svc.cluster.local:9092"
   notification_topic_name: "messages"
+  zipkin_endpoint: "http://zipkin.monitoring.svc.cluster.local:9411/api/v2/spans"
