--- a/helm/bank-app/charts/bank-blocker-service/values.yaml
+++ b/helm/bank-app/charts/bank-blocker-service/values.yaml
@@ -125,3 +125,4 @@ affinity: {}
 config:
   keycloak_uri: "http://bankapp-keycloak.{{ .Release.Namespace }}.svc.cluster.local/realms/intershop"
   zipkin_endpoint: "http://zipkin.monitoring.svc.cluster.local:9411/api/v2/spans"
+  kafka_server: "bankapp-kafka.{{ .Release.Namespace }}.svc.cluster.local:9092"
